# PA-Bench

./: README.md  pyproject.toml
data/scenario_001_multi_meeting_coordination/: data.json  verifier.py
data/scenario_002_multi_meeting_coordination/: data.json  task.json  verifier.py
data/scenario_003_meeting_modification/: data.json  verifier.py
data/scenario_004_meeting_modification/: data.json  task.json  verifier.py
data/scenario_005_conflict_detection/: data.json  verifier.py
data/scenario_006_conflict_detection/: data.json  task.json  verifier.py
data/scenario_007_meeting_rescheduling/: data.json  verifier.py
data/scenario_008_meeting_rescheduling/: data.json  task.json  verifier.py
data/scenario_009_meeting_cancellation/: data.json  task.json  verifier.py
data/scenario_010_meeting_cancellation/: data.json  verifier.py
data/scenario_011_travel_confirmation/: data.json  task.json  verifier.py
data/scenario_012_travel_confirmation/: data.json  verifier.py
data/scenario_013_cascading_changes/: data.json  verifier.py
data/scenario_014_cascading_changes/: data.json  task.json  verifier.py
data/scenario_015_meeting_scheduling/: data.json  task.json  verifier.py
data/scenario_016_meeting_scheduling/: data.json  verifier.py
gordon/: __init__.py
pa_bench_sdk/: __init__.py  cli.py  scenario.py  verifier.py  worlds.py
tests/: test_cli.py  test_scenario.py  test_verifier.py
